--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="pdfkit.js"></script>
 	<script src="blob-stream.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
+	<!--<script src="FileSaver.js-1.3.8/src/FileSaver.js" type="module"></script>-->
 	<h1>Onctopus_vis</h1>
 </head>
 
